fix various css spacing issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,30 +1,11 @@
 .normal-text-desktop-view {
   display: flex;
-  justify-content: center;
   width: 30%;
   height: fit-content;
   overflow: auto;
-  margin-left: 5%;
-  margin-right: 3%;
+  margin-right: 0%;
   margin-bottom: 3%;
-  padding: 2rem 2rem; /* top; bottom */
-  background: #191c29;
-  border-radius: 6px;
-  border: 2px solid rgba(56, 128, 62, 0.849);
-  color: rgb(25, 212, 88);
-  background-image: linear-gradient(#000000, #000000, #000000);
-}
-
-.textWrapper {
-  display: flex;
-  justify-content: center;
-  width: 30%;
-  height: fit-content;
-  overflow: auto;
-  margin-left: 5%;
-  margin-right: 3%;
-  margin-bottom: 3%;
-  padding: 2rem 3rem; /* top; bottom */
+  padding: 2rem 2rem;
   background: #191c29;
   border-radius: 6px;
   border: 2px solid rgba(56, 128, 62, 0.849);
@@ -84,6 +65,7 @@
   margin: 0px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .video_button {
@@ -160,10 +142,11 @@ ul > li > ul > li {
 
 .kotlin_carousel {
   max-width: 350px;
-  padding-left: 200px;
+  padding-left: 170px;
 }
 .kotlin_carousel_container {
   width: 30%;
+  padding-bottom: 3rem;
 }
 
 .hash_map_carousel {
@@ -179,6 +162,7 @@ ul > li > ul > li {
   display: flex;
   flex-direction: row;
   width: 100%;
+  justify-content: space-between;
 }
 
 .projectButtons {
@@ -193,6 +177,7 @@ ul > li > ul > li {
 .project_card_ski_shop {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .carousel_ski_shop {
@@ -210,6 +195,7 @@ ul > li > ul > li {
   display: flex;
   flex-direction: row;
   margin-bottom: 100px;
+  justify-content: space-between;
 }
 
 .space_tau_carousel_and_video {
@@ -220,12 +206,14 @@ ul > li > ul > li {
   margin-top: 20px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .project_card_rsa_encryption {
   margin-top: 20px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .carousel_rsa_encryption {
@@ -240,8 +228,8 @@ ul > li > ul > li {
 #about {
   background-image: linear-gradient(to top, #09203f 63%, #385266 100%);
   color: white;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 3rem;
+  padding-right: 3rem;
   padding-top: 100px;
   padding-bottom: 100px;
   margin-top: 30px;
@@ -289,10 +277,7 @@ html {
   color: white;
   box-shadow: 0px -15px 50px rgba(0, 0, 0, 1);
   min-height: fit-content;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 50px;
-  padding-top: 40px;
+  padding: 3rem;
 }
 
 .kotlin_section {
@@ -305,10 +290,7 @@ html {
   color: white;
   box-shadow: 0px -15px 50px rgba(0, 0, 0, 1);
   min-height: auto;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 50px;
-  padding-top: 40px;
+  padding: 3rem;
 }
 
 .smallsh_section {
@@ -321,19 +303,16 @@ html {
   color: white;
   box-shadow: 0px -15px 50px rgba(0, 0, 0, 1);
   min-height: fit-content;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 50px;
-  padding-top: 40px;
+  padding: 3rem;
 }
 
 .ski_shop_section {
   background-color: black;
   color: white;
   box-shadow: 0px -15px 50px rgba(0, 0, 0, 1);
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 50px;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-bottom: 3rem;
 }
 
 .apply_yourself_section {
@@ -346,10 +325,7 @@ html {
   color: white;
   box-shadow: 0px -15px 50px rgba(0, 0, 0, 1);
   min-height: fit-content;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 50px;
-  padding-top: 40px;
+  padding: 3rem;
 }
 
 .rsa_section {
@@ -362,10 +338,7 @@ html {
   color: white;
   box-shadow: 0px -15px 50px rgba(0, 0, 0, 1);
   min-height: fit-content;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 50px;
-  padding-top: 40px;
+  padding: 3rem;
 }
 
 .space_tau_section {
@@ -378,10 +351,7 @@ html {
   color: white;
   box-shadow: 0px -15px 50px rgba(0, 0, 0, 1);
   min-height: fit-content;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 50px;
-  padding-top: 40px;
+  padding: 3rem;
 }
 
 .project_card {
@@ -664,6 +634,7 @@ li {
   .kotlin_carousel_container {
     width: 100%;
     margin-bottom: 40px;
+    padding-bottom: 0;
   }
 
   .ski_shop_section {
@@ -803,5 +774,17 @@ li {
 
   .text-carousel-content {
     margin-top: 3rem;
+  }
+
+  .textWrapperMobile {
+    display: flex;
+    justify-content: center;
+    overflow: auto;
+    padding: 2rem 2rem;
+    background: #191c29;
+    border-radius: 6px;
+    border: 2px solid rgba(56, 128, 62, 0.849);
+    color: rgb(25, 212, 88);
+    background-image: linear-gradient(#000000, #000000, #000000);
   }
 }
