--- a/frontend/src/components/styles/AboutMeSection.module.css
+++ b/frontend/src/components/styles/AboutMeSection.module.css
@@ -10,7 +10,6 @@
   overflow: auto;
   padding-right: 3rem;
   padding-left: 3rem;
-  margin-right: 3%;
   padding-top: 2rem;
   padding-bottom: 2rem;
   background: #191c29;
@@ -18,6 +17,7 @@
   border: 2px solid rgba(56, 128, 62, 0.849);
   color: rgb(25, 212, 88);
   background-image: linear-gradient(#000000, #000000, #000000);
+  width: 100%;
 }
 
 .aboutMeSection {
